@@ -1,3 +1,8 @@
+2003-03-07  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	Handle new configuration parameter GDB_REGTESTS.
+
 2003-03-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
